# FrankenAgentLab

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.migration  LICENSE  README.md  alembic.ini  cloudbuild-migration.yaml  cloudbuild.yaml  env-vars.yaml  package-lock.json  package.json  pyproject.toml  setup-secrets.sh
alembic/: env.py
blueprints/: README.md  aws-docs-agent.yaml  content_creation_team.yaml  guardrails_test.yaml  http_api_agent.yaml  mcp_aws_docs_agent.yaml  mcp_team.yaml  memory_agent.yaml  mevzuat-agent.yaml  research_team.yaml  research_workflow.yaml  search_agent.yaml  simple_assistant.yaml  team_analyzer.yaml  test-mcp-aws-docs.yaml  test_json.json  test_minimal.yaml  test_simple.yaml
examples/: environment_config_demo.py  test_marketplace_api.py  test_research_team.py  test_team_validation.py
frankenagent/: __init__.py  exceptions.py  logging_config.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
monitoring/: README.md  alerts.yaml  dashboards.yaml
scripts/: README.md  add-secrets.sh  create_test_user.py  deploy-backend.sh  deploy-frontend.sh  deploy-production.sh  deploy-staging.sh  fix-production-connection.sh  install-firebase-cli.sh  install-gcp-cli.sh  prepare-deployment.sh  run-migration.sh  run-migrations.sh  seed_marketplace.py  setup-alerting.sh  setup-cicd.sh  setup-custom-domain.sh  setup-gcp-project.sh  setup-infrastructure.sh  setup-monitoring.sh  smoke-test-production.sh  test-oauth-quick.sh  test-staging.sh  validate-deployment.sh  (+3 more)
(+184 files in other folders)
