[tool.poetry]
name = "frankenagent"
version = "0.1.0"
description = "A Frankenstein-inspired visual agent builder"
authors = ["FrankenAgent Lab <lab@frankenagent.dev>"]
readme = "README.md"
packages = [{include = "frankenagent"}]

[tool.poetry.dependencies]
python = "^3.11"
agno = "^2.3.4"
pydantic = "^2.0"
pyyaml = "^6.0"
click = "^8.1"
fastapi = ">=0.115"
uvicorn = ">=0.31.1"
python-dotenv = "^1.0"
tavily-python = "^0.7.13"
openai = "^2.8.0"
anthropic = "^0.75.0"
sqlalchemy = "^2.0"
httpx = ">=0.27.1"
alembic = "^1.17.2"
bcrypt = "^5.0.0"
pyjwt = "^2.10.1"
cryptography = "^46.0.3"
psycopg2-binary = "^2.9.11"
google-cloud-kms = "^3.7.0"
email-validator = "^2.3.0"
redis = "^7.1.0"
mcp = "^1.22.0"
sib-api-v3-sdk = "^7.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
black = "^23.0"
ruff = "^0.1"
mypy = "^1.7"
hypothesis = "^6.92"

[tool.poetry.scripts]
frankenagent = "frankenagent.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
